# capsuleDB

./: .gitignore  .gitigore  CMakeLists.txt  README.md  client.cpp  compile_commands.json  config.yaml  loggertest.cpp  main.cpp  test_buffermanager.cpp  test_coroutine.cpp
src/: CMakeLists.txt  Database.cpp  Env.cpp
src/Binder/: Binder.cpp
src/CataLog/: CataLog.cpp  Column.cpp  Schema.cpp  TableCataLog.cpp  TableHeap.cpp
src/CataLog/PageIterator/: ColumnIterator.cpp  ColumnNumIterator.cpp  ColumnStringIterator.cpp
src/Execute/: ExecuteContext.cpp  ExecuteEngine.cpp
src/Execute/ExecutorNode/: AggregatePhysicalOperator.cpp  ExprExecutor.cpp  FilterPhysicalOperator.cpp  HashJoinPhysicalOperator.cpp  InsertPhysicalOperator.cpp  LimitPhysicalOperator.cpp  MaterializePhysicalOperator.cpp  PhysicalOperator.cpp  ResultPhysicalOperator.cpp  SeqScanPhysicalOperator.cpp  SortPhysicalOperator.cpp  SubqueryMaterializePhysicalOperator.cpp  ValuesPhysicalOperator.cpp
src/Execute/Pipeline/: Pipeline.cpp
src/Execute/core/: Chunk.cpp  ColumnFactory.cpp  ColumnString.cpp
src/Expressions/: ConstantValueExpression.cpp
src/Optimizer/: Optimizer.cpp
src/Planer/: LogicalOperator.cpp  Planer.cpp  ValuesLogicalOperator.cpp
src/Storage/: BufferManager.cpp  BufferManager.h  CMakeLists.txt
src/Table/: Tuple.cpp
src/Utils/: AsyncScheduler.cpp  Scheduler.cpp
src/common/: Value.cpp
src/include/: Database.h  Env.h
src/include/Binder/: Binder.h  BoundExpression.h  BoundOrderBy.h  BoundStatement.h
src/include/Binder/Expression/: BoundAgg.h  BoundAlias.h  BoundBinaryOp.h  BoundColumnRef.h  BoundConstant.h  BoundStar.h  BoundUnaryOp.h
src/include/Binder/Statement/: CreateStatement.h  ExplainStatement.h  InsertStatement.h  SelectStatement.h
src/include/Binder/TableRef/: BoundBaseTable.h  BoundCTETable.h  BoundExpressionList.h  BoundJoinTable.h  BoundSubQueryTable.h
src/include/CataLog/: CataLog.h  Column.h  Pages.h  Schema.h  TableCataLog.h
src/include/CataLog/PageIterator/: ColumnNumIterator.h  ColumnStringIterator.h  PageIterator.h
src/include/Execute/: BitMap.h  ExecuteContext.h  ExecuteEngine.h
src/include/Execute/ExecutorNode/: AggregatePhysicalOperator.h  ExprExecutor.h  FilterPhysicalOperator.h  HashJoinPhysicalOperator.h  InsertPhysicalOperator.h  LimitPhysicalOperator.h  MaterializePhysicalOperator.h  PhysicalOperator.h  ResultPhysicalOperator.h  SeqScanPhysicalOperator.h  SortPhyscialOperator.h  SubqueryMaterializePhysicalOperator.h  ValuesPhysicalOperator.h
src/include/Execute/Pipeline/: Pipeline.h
src/include/Execute/core/: Chunk.h  Column.h  ColumnFactory.h  ColumnString.h  ColumnVector.h
src/include/Expressions/: AndOrExpression.h  ArithmeticExpression.h  ColumnValueExpression.h  ComparisonExpression.h  ConstantValueExpression.h  LogicalExpression.h
src/include/Optimizer/: Optimizer.h
src/include/Planer/: AggregateLogicalOperator.h  FilterLogicalOperator.h  HashJoinLogicalOperator.h  LimitLogicalOperator.h  LogicalOperator.h  MaterilizeLogicaloperator.h  PlanContext.h  SeqScanLogicalOperator.h  SortLogicalOperator.h  SubqueryMaterializeLogicalOperator.h  TablePlan.h  ValuesLogicalOperator.h  planer.h
src/include/Table/: Tuple.h
src/include/Tableheap/: TableHeap.h
src/include/Utils/: ArrayView.h  AsyncScheduler.h  Generator.h  Scheduler.h  Task.h  ThreadPool.h
src/include/common/: Exception.h  Value.h  commonfunc.h  type.h
src/include/static/: RuntimeProfile.h  ScopeTimer.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
(+709 files in other folders)
